CSS animation on :before element not unset
Categories
(Core :: CSS Transitions and Animations, defect, P3)
Tracking
()
People
(Reporter: sjors.rijsdam, Assigned: emilio)
Details
(Keywords: regression)
Attachments
(3 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:67.0) Gecko/20100101 Firefox/67.0
Steps to reproduce:
I have created a progress indicator with some text and an icon in a generated element (:before).
When it is set in the busy state it is given an extra CSS class and the innerHTML is replaced. The CSS class animates the :before element. Afterwards when it is in the done state the busy CSS class is replaced with a done CSS class and the innerHTML is replaced again.
Isolated example: https://codepen.io/anon/pen/BgGgOE
Side note: In the example, when commenting out the lines that set the innerHTML the bug goes away and the behaviour is as expected.
Actual results:
Even though the animation CSS was removed by setting the done class, the :before element kept animating.
Expected results:
The :before element should have stopped animating in the done state.
Chrome and Safari do show the desired behaviour.
Comment 1•6 years ago
|
||
I tested this issue on Mac OS X 10.14 and Windows 10 x64 with FF release 68 and FF Nightly 70.0a1(2019-07-14) and I can reproduce the issue.
| Assignee | ||
Comment 2•6 years ago
|
||
Thanks for the extremely reduced testcase! It's always very appreciated :)
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Comment 4•6 years ago
|
||
mozregression says: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=edb7e1ddd9b61e2af2a75cfe5baa0f92a54a2716&tochange=594cc32b632396a867ef1f98428968b224d82151
There are a fair amount of suspect changes there.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
Comment 5•6 years ago
|
||
Yeah, nothing jumps out to me from that list as being particularly likely.
| Assignee | ||
Comment 6•6 years ago
|
||
I dug a bit and have a fix, though the nicer fix would be much harder.
| Assignee | ||
Comment 7•6 years ago
|
||
This is the easy fix.
The hard fix (outlined in the comment) would be nice, but I don't think this bug
alone justifies it.
Comment 8•6 years ago
|
||
Did you happen to identify the regressing bug?
| Assignee | ||
Comment 9•6 years ago
|
||
No, I didn't do manual bisection.
Comment 10•6 years ago
|
||
Comment 13•6 years ago
|
||
| bugherder | ||
Comment 14•6 years ago
|
||
Given how long this bug has been around, I'm thinking we can just let the fix ride the trains. Feel free to nominate for Beta approval if you feel strongly otherwise, however.
Updated•6 years ago
|
Description
•